<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/toolbar_bg"
    style="@style/ToolbarItemStyle">
    <Spinner
        android:id="@+id/SpinnerSmyol"
        android:entries="@array/sprsmyol"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/name_symol"
        style="@style/ToolbarItemStyle"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#333333"
        />
    <Spinner
        android:id="@+id/SpinnerTool"
        android:entries="@array/sprtool"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/name_tool"
        style="@style/ToolbarItemStyle"
        />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#333333"
        />
    <Spinner
        android:id="@+id/SpinnerMethrd"
        android:entries="@array/sprmethrd"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/name_methord"
        style="@style/ToolbarItemStyle"
        />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#333333"
        />
    <Spinner
        android:id="@+id/SpinnerData"
        android:entries="@array/sprsdata"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/name_data"
        style="@style/ToolbarItemStyle" />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#333333"
        />
    <Spinner
        android:entries="@array/sprbug"
        android:id="@+id/SpinnerBug"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/name_bug"
        style="@style/ToolbarItemStyle" />
</TableLayout>